# gjumper

./: .gitignore  CMakeLists.txt  astvisitor.cpp  astvisitor.h  astvisitor_visits.cpp  datatypes.cpp  datatypes.h  full_recacher.cpp  gj.vim  gj_compile.sh  gjumper_client.cpp  hierarcy_tree.cpp  hierarcy_tree.h  hint_db_cache_manager.cpp  hint_db_cache_manager.h  hintdb_exporter.cpp  hintdb_exporter.h  main.cpp  makefile  processor.cpp  processor.h
src/: CMakeLists.txt  gjcc_utilite.cpp  gjumper_client.cpp
src/core/: CMakeLists.txt  astvisitor.h  astvisitor_visits.cpp  communication.cpp  communication.h  datatypes.cpp  datatypes.h  fs_utils.cpp  fs_utils.h  hierarcy_tree.cpp  hierarcy_tree.h  hint_db_cache_manager.cpp  hint_db_cache_manager.h  hintdb_exporter.cpp  hintdb_exporter.h  processor.cpp  processor.h
